# ESW

./: .gitignore  .gitmodules  README.md
hw/hw01/: ellipse.diff.txt
hw/hw02/: README.md  shell.nix  t.sh
hw/hw02/incl/: handle.h
hw/hw02/src/: main.c  tcp_server.c
hw/hw03/: .gitignore  README  list.cpp  list.hpp  main.cpp  meson.build  rcu.diff.txt
hw/hw03/npins/: sources.json
hw/hw04/: .gitignore  measurements.json  results.json  toBrute.sh
hw/hw04/assets/: checkWarmUp.py  createResults.py  log_measureMultiply.txt  log_measureMultiply1D.txt  log_measureMultiplyTrans.txt  script.py
hw/hw05/: README.md  meson.build  pom.xml  shell.nix
hw/hw05/npins/: sources.json
hw/hw05/src/main/cpp/: dataset.cpp  dataset.h  jsonserializable.h  main.cpp  measurementinfo.h  meson.build  result.h
hw/hw06/: pom.xml
hw/hw09/: pom.xml
labs/lab01/: Notes.md  sum-a-b.c
labs/lab01/esw-intro/: meson.build  shell.nix  sum-a-b  sum-input.json
labs/lab01/json-c-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  config.h  install_manifest.txt  json-c.pc  libjson-c.so.5.3.0
labs/lab02/: .gitignore  README.md
labs/lab02/ellipses/: .gitlab-ci.yml  README.md  meson.build  shell.nix
labs/lab03/epoll-in-c/: .gitlab-ci.yml  README  client.py  meson.build
labs/lab03/epoll-in-c/incl/: ds.h  handle.h
labs/lab03/epoll-in-c/src/: all.c  main.c  stdin.c  tcp_server.c  timer.c
labs/lab04/: README  definitions.hpp  list.cpp  list.hpp  main.cpp  shell.nix
lectures/02/: README.md
(+58 files in other folders)
